    - Remove obsolate patches:
      + 05_removed-empty-directory.diff
      + 10-keywords_desktop.patch
    - Add new patch 0001-intltool_utf8.patch to fix Debian build errors.
  * debian/control:
    - Add requested python 3 and remove unneeded python 2 to/from Build-Depends.
    - Change Vcs-Browser and Homepage to secure URI.
    - Add X-Python3-Version and remove X-Python-Version.
  * Declare compliance with Debian Policy 4.0.0. (No changes needed).
  * Bump compat to 10:
    - Change debian/compat to 10.
    - Change debhelper version at debian/control to >= 10.

 -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Thu, 06 Jul 2017 23:01:19 +0200

rapid-photo-downloader (0.4.11-1) unstable; urgency=medium

  * New upstream release (Closes: #806975, #806976).
  * Remove debian/menu by reason of tech-ctte bug #741573.
  * Rewrite debian/watch to track the last version.

 -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sun, 06 Dec 2015 02:58:59 +0100

rapid-photo-downloader (0.4.10-3) unstable; urgency=medium

  * debian/control:
    - Bump Standards-Version to 3.9.6 (no changes required).
    - Add dh-python to Build-Depends to prevent warning at build.
    - Remove X-Python-Version 2.6 during installation errors.
  * New debian/lintian-overrides:
    - Override the warning "desktop-mime-but-no-exec-code" because
      the program don't use parameters for filenames.
  * debian/copyright:
    - Add year 2015.
  * Remove debian/source/options because compression xz is standard now.
  * Refresh patches.

 -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Mon, 11 May 2015 23:43:30 +0200

rapid-photo-downloader (0.4.10-2) unstable; urgency=medium

  * New maintainer (Closes: #753568).
  * debian/control:
    - Set myself as maintainer.
    - Vcs:
      + Remove upstream Vcs.
      + Create a new git repository on alioth.
      + Add the Fields Vcs-Browser and Vcs-Git.
  * Add debian/source/options:
    - Set compression to xz & compression-level to 9 to save space.